--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,9 @@
+require:
+  - rubocop-rake
+  - rubocop-rspec
+
 AllCops:
-  TargetRubyVersion: 2.6
+  TargetRubyVersion: 3.1
 
 Style/StringLiterals:
   Enabled: true
